<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/content_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.smartsensor.www.MainActivity"
    tools:showIn="@layout/app_bar_main">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="RelHumTV"
        android:ems="10"
        android:id="@+id/RelHumTV"
        android:layout_below="@+id/RelHumTVLabel"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="AirPressureTV"
        android:ems="10"
        android:id="@+id/AirPressureTV"
        android:layout_below="@+id/AirPressureTVLabel"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/UVTVLabel"
        android:ems="10"
        android:id="@+id/UVTVLabel"
        android:layout_alignBaseline="@+id/TempTVLabel"
        android:layout_alignBottom="@+id/TempTVLabel"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="UVTV"
        android:ems="10"
        android:id="@+id/UVTV"
        android:layout_alignBaseline="@+id/TempTV"
        android:layout_alignBottom="@+id/TempTV"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="PMTV"
        android:ems="10"
        android:id="@+id/PMTV"
        android:layout_alignBaseline="@+id/RelHumTV"
        android:layout_alignBottom="@+id/RelHumTV"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="AirQualTV"
        android:ems="10"
        android:id="@+id/AirQualTV"
        android:layout_alignBaseline="@+id/AirPressureTV"
        android:layout_alignBottom="@+id/AirPressureTV"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/AirQualTVLabel"
        android:ems="10"
        android:id="@+id/AirQualTVLabel"
        android:layout_alignBaseline="@+id/AirPressureTVLabel"
        android:layout_alignBottom="@+id/AirPressureTVLabel"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/PMTVLabel"
        android:ems="10"
        android:id="@+id/PMTVLabel"
        android:layout_alignBaseline="@+id/RelHumTVLabel"
        android:layout_alignBottom="@+id/RelHumTVLabel"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="pm1tv"
        android:ems="10"
        android:id="@+id/pm1tv"
        android:layout_below="@+id/pm1TVLabel"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="rbvtv"
        android:ems="10"
        android:id="@+id/rbvtv"
        android:layout_below="@+id/rbvTVLabel"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="tempbmptv"
        android:ems="10"
        android:id="@+id/tempbmptv"
        android:layout_below="@+id/tempbmpTVLabel"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="State"
        android:ems="10"
        android:id="@+id/stateTVLabel"
        android:layout_above="@+id/statetv"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="PM1"
        android:ems="10"
        android:id="@+id/pm1TVLabel"
        android:layout_alignBaseline="@+id/BatVoltTVLabel"
        android:layout_alignBottom="@+id/BatVoltTVLabel"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Temp Node"
        android:ems="10"
        android:id="@+id/tempnodeTVLabel"
        android:layout_above="@+id/tempnodetv"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="statetv"
        android:ems="10"
        android:id="@+id/statetv"
        android:layout_alignBaseline="@+id/tempbmptv"
        android:layout_alignBottom="@+id/tempbmptv"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="BatVoltTV"
        android:ems="10"
        android:id="@+id/BatVoltTV"
        android:layout_above="@+id/rbvTVLabel"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="PM10"
        android:ems="10"
        android:id="@+id/pm10TVLabel"
        android:layout_alignBaseline="@+id/rbvTVLabel"
        android:layout_alignBottom="@+id/rbvTVLabel"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="pm10tv"
        android:ems="10"
        android:id="@+id/pm10tv"
        android:layout_below="@+id/pm10TVLabel"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="tempDS2131tv"
        android:ems="10"
        android:id="@+id/tempnodetv"
        android:layout_below="@+id/GeoLocTVLabel"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="GeoLocTV"
        android:ems="10"
        android:id="@+id/GeoLocTV"
        android:layout_below="@+id/GeoLocTVLabel"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Date"
        android:ems="10"
        android:id="@+id/dateTV"
        android:layout_alignParentBottom="true"
        android:layout_alignLeft="@+id/tempnodetv"
        android:layout_alignStart="@+id/tempnodetv" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/GeoLocTVLabel"
        android:ems="10"
        android:id="@+id/GeoLocTVLabel"
        android:layout_marginTop="11dp"
        android:layout_below="@+id/tempbmptv"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Temp BMP"
        android:ems="10"
        android:id="@+id/tempbmpTVLabel"
        android:layout_marginTop="11dp"
        android:layout_below="@+id/rbvtv"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Raw Battery Voltage"
        android:ems="10"
        android:id="@+id/rbvTVLabel"
        android:layout_marginTop="11dp"
        android:layout_below="@+id/pm1tv"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:text="@string/BatVoltTVLabel"
        android:ems="10"
        android:id="@+id/BatVoltTVLabel"

        android:layout_marginTop="11dp"
        android:layout_below="@+id/AirQualTV"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/AirPressureTVLabel"
        android:ems="10"
        android:id="@+id/AirPressureTVLabel"
        android:layout_marginTop="13dp"
        android:layout_below="@+id/RelHumTV"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="TempTV"
        android:ems="10"
        android:id="@+id/TempTV"
        android:layout_below="@+id/TempTVLabel"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/RelHumTVLabel"
        android:ems="10"
        android:id="@+id/RelHumTVLabel"
        android:layout_marginTop="12dp"
        android:layout_below="@+id/TempTV"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/TempTVLabel"
        android:ems="10"
        android:id="@+id/TempTVLabel"
        android:layout_marginTop="158dp"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

</RelativeLayout>
